--- a/src/Ok.Tech.Api/Ok.Tech.Api.csproj
+++ b/src/Ok.Tech.Api/Ok.Tech.Api.csproj
@@ -4,4 +4,17 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.14" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.14" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.14" />
+	  
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Ok.Tech.App\Ok.Tech.App.csproj" />
+    <ProjectReference Include="..\OK.Tech.Infra.Data\OK.Tech.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
